Revision history for Perl extension Calendar::Simple.

2002-07-30 20:40  dave

        * Simple.pm (1.5): Fixed undefined value errors

2002-07-13 15:07  dave

        * Simple.pm (1.4): Doc patches

2002-07-12 19:25  dave

        * Simple.pm (1.3): Added CVS tags

2002-07-12 19:23  dave

        * Simple.pm (1.2): Added start day option

2002-07-12 19:13  dave

        * Simple.pm (1.1): Initial revision